# focci

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  go.mod  go.sum  main.go
.github/workflows/: ci.yml  release.yml
cmd/: agents.go  claude.go  codex.go  doctor.go  focus.go  hook.go  install.go  root.go  uninstall.go
internal/config/: claude.go  codex.go  config.go  config_test.go
internal/event/: event.go  event_test.go
internal/focus/: focus.go  focus_test.go
src/: doctor.rs  event.rs  focus.rs  install.rs  main.rs
