[package]
name = "focci"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Refocus your terminal/editor when an AI coding agent (Claude Code, Codex) finishes a turn or needs your attention."
authors = ["Habib Khan"]
license = "Apache-2.0"
repository = "https://github.com/HabibUllahKhanBarakzai/focci"
homepage = "https://github.com/HabibUllahKhanBarakzai/focci"
readme = "README.md"
keywords = ["claude", "codex", "macos", "focus", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "focci"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml_edit = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
